# test_action

./: .env.example  .env.ipad  .env.production  .gitignore  BUILD_GUIDE.md  DEVELOPMENT.md  List_bug.md  NOTE_DEV.md  README.md  app-config.example.json  app-config.json  index.html  package.json  site-config.md  tsconfig.json  vite.config.ts
.github/workflows/: build.yml
src/: env.d.ts  eslint.config.mjs  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/assets/fonts/: .gitkeep
src/assets/moc/: index.ts
src/assets/styles/: app.styl  index.styl
src/components/: TheApp.vue
src/components/NavBar/: index.vue
src/components/UiKit/: index.ts
src/components/builder/: api.d.ts  index.vue
src/components/ui/: .gitkeep  Selector.vue
src/composables/: index.ts  useCircuit.ts  useDate.ts  useEvent.ts
src/config/: index.ts  runtimeConfig.ts
src/directives/: tap.ts
src/pages/Circuits/: index.vue  step.vue
src/pages/DynamicPage/: index.vue
src/pages/Evenements/: index.vue  single.vue
src/pages/Home/: index copy.vue  index-old.vue  index-variant.vue  index-with-style.vue  index.vue
src/pages/Selection/: city.vue  index.vue
src/pages/UiKit/: index.vue
src/plugins/api/: apiSite.ts  assets.service.ts  cache.service.ts  index.ts  mock-data.ts
src/plugins/i18n/: index.ts  store.ts
src/plugins/store/: app.ts  index.ts  interface.ts  (+2 more)
src/router/: index.ts
src/types/: api.types.d.ts  api.types.ts  global.d.ts  media.d.ts  point.d.ts
src/utils/: kioskInactivity.ts  refresh.ts
(+100 files in other folders)
